--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vite-pwa/nuxt": "1.1.1",
     "@vueuse/nuxt": "14.2.1",
     "argon2": "^0.44.0",
+    "date-holidays": "^3.26.8",
     "nuxt": "^4.3.1",
     "pg": "^8.18.0",
     "vue": "^3.5.28",
